Fix the spacing and errors

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,59 @@
 html {
   box-sizing: border-box;
+  line-height: 1.5;
   background-color: #eee9de;
-  font-family: Lato
+  font-family: Lato, sans-serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+section {
+  text-align: center;
+  padding: 2em 0;
+}
+
+h2 {
+  display: block;
+  text-align: left;
+  margin: 0 0 1.5rem;
+}
+
+p {
+  display: inline-block;
+  max-width: 25em;
+  text-align: left;
+  margin-top: .05em;
+}
+
+div {
+  display: inline-block;
+  padding: 1em;
+  vertical-align: middle;
+  max-width: 25em;
+  text-align: left;
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+
+.btn {
+  color: #666;
+  text-decoration: none;
+  display: block;
+  padding: .6em;
+  border: 3px solid #333;
+  border-radius: .5em;
+  max-width: fit-content;
+  width: 100%;
+  font-size: 1.1rem;
+  background-color: #eee9de;
+  text-align: left;
 }
